tests/neg/subtyping.jo
type S = {a: Int, b: S, c: Int}
type T = {a: Int, b: T}

def test1(t: T): S = t  // error

type X = {a: Int, b: Y, c: Int}
type Y = {a: Int, b: X}

def test2(x: X): Y = x  // error

def main = println 1
